force-app/main/default/objects/User/fields/Hr_Access__c.field-meta.xml
<CustomField>
    <fullName>Hr_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hr Access</label>
    <type>Checkbox</type>
</CustomField>