force-app/main/default/objects/User/fields/IT_Admin_Access__c.field-meta.xml
<CustomField>
    <fullName>IT_Admin_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Admin Access</label>
    <type>Checkbox</type>
</CustomField>