force-app/main/default/objects/User/fields/Lead_Access__c.field-meta.xml
<CustomField>
    <fullName>Lead_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Access</label>
    <type>Checkbox</type>
</CustomField>