force-app/main/default/objects/User/fields/Leave_Admin__c.field-meta.xml
<CustomField>
    <fullName>Leave_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox enabled the logged-in HR/ADMIN user to view all Leaves requested by resources irrespective of the logged-in Contacts Work Location</description>
    <label>Leave Management Administrator</label>
    <type>Checkbox</type>
</CustomField>