force-app/main/default/objects/User/fields/Manager_Access__c.field-meta.xml
<CustomField>
    <fullName>Manager_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Access</label>
    <type>Checkbox</type>
</CustomField>