force-app/main/default/objects/User/fields/project_manager__c.field-meta.xml
<CustomField>
    <fullName>project_manager__c</fullName>
    <label>Project Manager</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>