force-app/main/default/objects/User/fields/TA_Admin__c.field-meta.xml
<CustomField>
    <fullName>TA_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TA Admin</label>
    <type>Checkbox</type>
</CustomField>