force-app/main/default/objects/User/fields/TA_Member__c.field-meta.xml
<CustomField>
    <fullName>TA_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TA Member</label>
    <type>Checkbox</type>
</CustomField>