force-app/main/default/objects/User/fields/Timesheet_Admin__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timesheet Admin</label>
    <type>Checkbox</type>
</CustomField>