force-app/main/default/objects/User/fields/User_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Status__c</fullName>
    <description>Setting value based on User active checkbox value</description>
    <formula>IF( IsActive , &apos;Active&apos;, &apos;Inactive&apos;)</formula>
    <label>User Status</label>
    <type>Text</type>
</CustomField>